# steamApi

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  steamApi.py  steamTest.py  updateSteamGames.sh
src/: wsgi.py
