[project]
name = "steamapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.3",
    "flask==2.2.2",
    "fuzzywuzzy==0.18.0",
    "gunicorn==20.1.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "levenshtein==0.26.1",
    "markupsafe==2.1.1",
    "werkzeug==2.2.2",
]
